--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,9 @@
       <section class="boxes">  
         <div class="container">
           <div class="box">
-            <p>1234 example address, CA, United States</p>
-            <p>www.example.com</p>
-            <p>555-1234</p>
+            <p>mrudraprasad5@gmail.com, Odisha, India</p>
+            <p>www.SuitCoder.in</p>
+            <p>761103</p>
           </div>
         </div>
       </section>
